data/derived/sp14/progs/unify/prog0260.ml.out
Characters 72-127:
  | h::t -> ( mulByDigit i (List.rev (List.map (fun x->x*10) t )) ) :: h*i :: [];;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
